SLLS-225 populate taint cache when needed